--- a/src/assets/styles/components/footer.css
+++ b/src/assets/styles/components/footer.css
@@ -54,3 +54,20 @@
   flex-direction: column;
   row-gap: 1rem;
 }
+
+@media (max-width: 960px) {
+  .footer {
+    background-color: var(--secondary-color);
+
+    margin-bottom: 0rem;
+    padding: 1.25rem 0.675rem;
+  }
+
+  .footer-branding-logo img {
+    filter: invert(1);
+  }
+
+  .socials-list-item a img {
+    filter: invert(150%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
+  }
+}
