--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -10,84 +10,6 @@
   padding-bottom: 2.75rem;
 }
 
-/* Page navigation slider */
-
-.header-bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-
-  max-width: 1440px;
-  width: 100%;
-  height: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 0 1.5rem 0 1.5rem;
-}
-
-.header-bottom-page-nav-glide {
-  flex-grow: 1;
-  overflow: auto;
-
-  width: 100%;
-}
-
-.header-bottom-page-nav-track {
-  overflow: hidden;
-
-  width: 100%;
-}
-
-.header-bottom-page-nav-track .page-nav-slides {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  column-gap: 3.75rem;
-  
-  width: 100%;
-}
-
-.header-bottom-page-nav-track .page-nav-slides::-webkit-scrollbar {
-  width: 0;
-}
-
-.page-nav-slides {
-  display: flex;
-  flex-direction: row;
-  justify-items: center;
-  align-items: center;
-
-  min-height: 60px;
-}
-
-.page-nav-slide {
-  display: flex;
-  align-items: center;
-  min-height: 54px;
-}
-
-.page-nav-slide a {
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  transition:
-    background-color 0.3s ease,
-    padding 0.3s ease,
-    border-radius 0.3s ease;
-}
-
-.page-nav-slide.active a {
-  background-color: var(--secondary-color);
-
-  padding: 0.875rem 1.75rem;
-  border-radius: 150px;
-}
-
 .header-bottom-wrapper {
   display: flex;
   flex-wrap: nowrap;
@@ -95,6 +17,7 @@
   align-items: center;
 
   width: 100%;
+  padding-right: 27rem;
 }
 
 /* Header dish slider */
@@ -502,81 +425,159 @@
   align-items: flex-end;
 }
 
-/* Sticky menu */
+@media (max-width: 1280px) {
+  /* Header */
 
-.sticky-nav-menu {
-  position: fixed;
-  display: none;
-  top: 0;
-  overflow: auto;
-  
-  background-color: var(--primary-color);
-
-  width: 100%;
-  height: 100px;
-  
-  box-shadow: 0 -6px 36px 5px rgba(0, 0, 0, 0.06);
-  z-index: 6;
-}
-
-.static {
-  display: block;
-  
-  animation: slide-in 1s;
-}
-
-.hidden {
-  display: none;
-
-  animation: slide-out 1s;
-}
-
-@keyframes slide-in {
-  from {
-    opacity: 0;
-    display: none;
+  .header {
+    min-height: 720px;
   }
 
-  to {
-    opacity: 1;
-    display: block;
+  .dishes-glide-slide {
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+
+  .header-bottom-dishes-glide {
+    position: relative;
+  }
+
+  .dish-img {
+    max-height: 222px;
+  }
+
+  .dish-text-content-wrapper {
+    justify-content: center;
+    align-items: center;
+    row-gap: 1.5rem;
+  }
+
+  .price-and-cart-wrapper {
+    justify-content: center;
+  }
+
+  /* Stories */
+
+  .stories .scroll-stories {
+    column-gap: 2rem;
   }
 }
 
-@keyframes slide-out {
-  from {
-    opacity: 1;
-    display: block;
+@media (max-width: 960px) {
+  /* Header */
+
+  .header {
+    padding-bottom: 1rem;
   }
 
-  to {
-    opacity: 0;
-    display: none;
+  .header-bottom-wrapper {
+    padding: 0 0.625rem 0 0.625rem;
   }
-} 
 
-.sticky-nav-menu .sticky-nav-menu-track {
-  overflow: hidden;
+  .dishes-glide-slide {
+    min-height: 776px;
+  }
 
-  max-width: 1400px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: 22.5px;
-}
+  .dish-img {
+    max-height: none;
+  }
 
-.sticky-nav-menu-track .page-nav-slides {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: center;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  column-gap: 3.75rem;
+  .slide-dish-description {
+    max-width: 500px;
+  }
+
+  .price-and-cart-wrapper {
+    justify-content: flex-start;
+    column-gap: 2.5rem;
+  }
+
+  /* Stories */
+
+  .stories-slider {
+    padding: 1.25rem 0.625rem;
+  }
   
-  width: 100%;
+  .stories .scroll-stories {
+    column-gap: 1rem;
+  }
+
+  /* Dishes menu */
+
+  .dishes-menu {
+    padding: 1.25rem 0.625rem;
+  }
+
+  .dishes-menu-container {
+    row-gap: 1.75rem;
+  }
+
+  .menu-section {
+    row-gap: 1.75rem;
+  }
+
+  .menu-section-wrapper {
+    justify-items: center;
+  }
+
+  .dish-card {
+    max-width: 290px;
+  }
 }
 
-.sticky-nav-menu-track .page-nav-slides::-webkit-scrollbar {
-  width: 0;
+@media (max-width: 575px) {
+  /* Dishes slider */
+
+  .dishes-glide-slide {
+    min-height: 500px;
+    margin-top: auto;
+  }
+
+  .dish-img {
+    max-height: 300px;
+  }
+
+  .dish-text-content-wrapper {
+    max-width: 320px;
+  }
+
+  /* Stories */
+
+  .stories .scroll-stories .story .photo img {  
+    width: 88px;
+    height: 88px;
+  }
+
+  /* Dishes menu */
+
+  .menu-section-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    column-gap: 1.5rem;
+    row-gap: 1.75rem;
+  }
+}
+
+@media (max-width: 395px) {
+  .dishes-glide-slide {
+    min-height: 540px;
+  }
+
+  .dish-text-content-wrapper {
+    max-width: 222px;
+  }
+
+  /* Stories */
+  
+  .stories .scroll-stories {
+    column-gap: 0;
+  }
+
+  .stories .scroll-stories .story .photo {
+    width: 86px;
+    height: 86px;
+  }
+
+  .stories .scroll-stories .story .photo img {  
+    width: 66px;
+    height: 66px;
+  }
 }
