--- a/src/assets/styles/base/typography.css
+++ b/src/assets/styles/base/typography.css
@@ -601,6 +601,30 @@ textarea {
   .reviews-call-to-action-text {
     font-size: 1.125rem;
   }
+
+  /* Checkout */
+
+  #checkout-header {
+    font-size: 1.375rem;
+  }
+
+  #choose-time-header,
+  #payment-method-header,
+  #details-header {
+    font-size: 1.375rem;
+  }  
+
+  .choose-time-checkbox-text {
+    font-size: 0.75rem;
+  }
+
+  #amount-cutlery-header {
+    font-family: var(--font-montserrat);
+    font-weight: var(--weight-medium);
+    font-size: 0.75rem;
+    color: var(--text-color-dark);
+  }
+
 }
 
 @media (max-width: 395px) {
