--- a/src/assets/styles/base/typography.css
+++ b/src/assets/styles/base/typography.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Inter";
-  src: url("/public/assets/fonts/Inter.woff2")
-    format("woff2");
+  src: url("/public/assets/fonts/Inter.woff2") format("woff2");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -27,8 +26,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Thin.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Thin.woff") format("woff2");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -36,8 +34,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Light.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Light.woff") format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -45,8 +42,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Regular.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Regular.woff") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -54,8 +50,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Medium.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Medium.woff") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -63,8 +58,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Bold.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Bold.woff") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -72,8 +66,7 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("/public/assets/fonts/Roboto-Black.woff")
-    format("woff2");
+  src: url("/public/assets/fonts/Roboto-Black.woff") format("woff2");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -82,7 +75,7 @@
 @font-face {
   font-family: "Pacifico";
   src: url("/public/assets/fonts/FwZY7-Qmy14u9lezJ-6D6MmTpA.woff2")
-    format('woff2');
+    format("woff2");
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -242,7 +235,7 @@ textarea {
   font-family: var(--font-montserrat);
   font-weight: var(--weight-light);
   font-size: 0.75rem;
-  color: #8C8C8C;
+  color: #8c8c8c;
 }
 
 .policy-agreement a {
@@ -300,7 +293,7 @@ textarea {
 .previous-price {
   font-family: var(--font-roboto);
   font-weight: var(--weight-regular);
-  color: #A7A7A7;
+  color: #a7a7a7;
   text-decoration: line-through;
 }
 
@@ -316,7 +309,7 @@ textarea {
   font-family: var(--font-montserrat);
   font-weight: var(--weight-semibold);
   font-size: 0.875rem;
-  color: #9E9E9E;
+  color: #9e9e9e;
 }
 
 .cart-header {
@@ -509,7 +502,6 @@ textarea {
   font-size: 1rem;
 }
 
-
 /* Posters */
 
 #posters-header {
@@ -587,7 +579,7 @@ textarea {
   color: var(--text-color-dark);
 }
 
-@media (max-width: 1280px) {
+@media (width <= 1280px) {
   /* Header */
   .dish-name {
     font-size: 2rem;
@@ -604,7 +596,7 @@ textarea {
   }
 }
 
-@media (max-width: 960px) {
+@media (width <= 960px) {
   /* Map */
 
   .map-call-to-action-address {
@@ -642,7 +634,7 @@ textarea {
   }
 }
 
-@media (max-width: 681px) {
+@media (width <= 681px) {
   /* Reviews */
 
   .reviews-header,
@@ -651,10 +643,10 @@ textarea {
   }
 }
 
-@media (max-width: 575px) {
+@media (width <= 575px) {
   /* Buttons */
 
-  .btn-book-table{
+  .btn-book-table {
     font-size: 0.75rem;
   }
 
@@ -708,7 +700,7 @@ textarea {
   #payment-method-header,
   #details-header {
     font-size: 1.375rem;
-  }  
+  }
 
   .choose-time-checkbox-text {
     font-size: 0.75rem;
@@ -735,13 +727,13 @@ textarea {
   .article-header {
     font-size: 2rem;
   }
-  
+
   .recomendations-header {
     font-size: 2rem;
   }
 }
 
-@media (max-width: 395px) {
+@media (width <= 395px) {
   /* Buttons */
 
   .btn-read-poster {
@@ -753,7 +745,7 @@ textarea {
   .menu-section-header {
     font-size: 1.375rem;
   }
-  
+
   /* Reviews */
 
   .reviews-header {
@@ -788,7 +780,7 @@ textarea {
   .article-header {
     font-size: 1.375rem;
   }
-  
+
   .recomendations-header {
     font-size: 1.375rem;
   }
