--- a/src/assets/styles/components/inputs.css
+++ b/src/assets/styles/components/inputs.css
@@ -25,10 +25,11 @@
 
 .button-switch {
   position: relative;
+  
   width: 323px;
   height: 39px;
-  border-radius: 10px;
-  
+  border-radius: 0.625rem;
+
   overflow: hidden;
 }
 
@@ -38,10 +39,12 @@
 
 .checkbox {
   position: relative;
+  
   width: 100%;
   height: 100%;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  
   opacity: 0;
   cursor: pointer;
   z-index: 3;
@@ -52,8 +55,10 @@
 }
 
 .layer {
+  background-color: #edf2f7;
+  
   width: 100%;
-  background-color: #EDF2F7;
+  
   transition: 0.3s ease all;
   z-index: 1;
 }
@@ -63,14 +68,16 @@
 .button-switch .knobs span {
   position: absolute;
   top: 3px;
-  width: 149px;
-  height: 33px;
-  font-size: 14px;
+  
+  font-size: 0.875rem;
   font-weight: bold;
   text-align: center;
   line-height: 1;
+  
+  width: 149px;
+  height: 33px;
   padding: 10px 27px;
-  border-radius: 10px 0 0 10px;
+  border-radius: 0.625rem 0 0 0.625rem;
   transition: 0.3s ease all;
 }
 
@@ -79,33 +86,39 @@
 .placing-order .button-switch .knobs span {
   position: absolute;
   top: 3px;
-  width: calc((100% - 25px) / 2);
-  height: 33px;
-  font-size: 14px;
+  
+  font-size: 0.875rem;
   font-weight: bold;
   text-align: center;
   line-height: 1;
+  
+  width: calc((100% - 25px) / 2);
+  height: 33px;
   padding: 10px 27px;
-  border-radius: 10px 0 0 10px;
+  border-radius: 0.625rem 0 0 0.625rem;
   transition: 0.3s ease all;
 }
 
 .button-switch .knobs:before {
   content: "";
   left: 5px;
-  background-color: #FFFFFF;
+  
+  background-color: #ffffff;
 }
 
 .button-switch .knobs:after {
   content: "Самовывоз";
   right: 5px;
+  
   color: #909294;
 }
 
 .button-switch .knobs span {
   display: inline-block;
   left: 5px;
+  
   color: #909294;
+  
   z-index: 1;
 }
 
@@ -115,32 +128,36 @@
 
 .button-switch .checkbox:checked + .knobs:before {
   left: 169px;
-  background-color: #FFFFFF;
-  border-radius: 0 10px 10px 0;
+  background-color: #ffffff;
+  border-radius: 0 0.625rem 0.625rem 0;
   color: #909294;
 }
 
 .placing-order .button-switch .checkbox:checked + .knobs:before {
   left: calc((100% - 25px) / 2 + 20px);
-  background-color: #FFFFFF;
-  border-radius: 0 10px 10px 0;
+  
   color: #909294;
+  
+  background-color: #ffffff;
+  
+  border-radius: 0 0.625rem 0.625rem 0;
 }
 
 .button-switch .checkbox:checked + .knobs:after {
   color: #909294;
+
   z-index: 1;
 }
 
 .button-switch .checkbox:checked ~ .layer {
-  background-color: #EDF2F7;
+  background-color: #edf2f7;
 }
 
-
 .form-group {
-  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
+
+  margin-bottom: 1rem;
 }
 
 .form-group-row {
@@ -156,49 +173,52 @@
 }
 
 .form-label {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: normal;
+
   margin-bottom: 5px;
 }
 
 .form-input {
   width: 100%;
-  box-sizing: border-box;
 }
 
 .small-input {
   flex: 1;
-  max-width: 100px;
+
+  max-width: 6.25rem;
 }
 
 .input-wrapper:has(.form-input:focus) {
-  outline: none;
-  border-color: #4E9F37;
+  border-color: #4e9f37;
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+  outline: none;
 }
 
 .modal-book-table .input-wrapper:has(.form-input:focus),
 .placing-order .input-wrapper:has(.form-input:focus) {
-  outline: none;
   border-color: var(--secondary-color);
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+  outline: none;
 }
 
 .form-input,
 .form-select {
+  font-size: 0.875rem;
+  
   width: 100%;
-  font-size: 14px;
   border: none;
   box-sizing: border-box;
   appearance: none;
 }
 
 .small {
-  max-width: 120px;
+  max-width: 7.5rem;
 }
 
 .required {
   color: red;
+
   margin-left: 5px;
 }
 
@@ -210,22 +230,25 @@
 
 .input-wrapper {
   position: relative;
-  
-  padding: 6px 15px;
+
+  padding: 0.375rem 1rem;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   outline: none;
-  
-  transition: border-color 0.3s, box-shadow 0.3s;
+
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
 }
 
-.input-wrapper:has(.telephone){
-  padding: 10px 15px;
+.input-wrapper:has(.telephone) {
+  padding: 0.625rem 1rem;
 }
 
 .form-input {
+  font-size: 0.875rem;
+  
   width: 100%;
-  font-size: 14px;
 }
 
 .form-input::placeholder {
@@ -240,11 +263,15 @@
 .placeholder-star {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  font-size: 14px;
+  
+  font-size: 0.875rem;
   color: red;
-  pointer-events: none;
+  
   opacity: 0;
+  
+  transform: translateY(-50%);
+  
+  pointer-events: none;
 }
 
 .input-wrapper:has(.street) .placeholder-star {
@@ -261,19 +288,19 @@
 }
 
 .input-wrapper:has(.telephone) .placeholder-star {
-  left: calc(15px + 16.5ch); 
+  left: calc(15px + 16.5ch);
 }
 
 .input-wrapper:has(.people-amount) .placeholder-star {
-  left: calc(15px + 15.7ch); 
+  left: calc(15px + 15.7ch);
 }
 
 .form-input:focus::placeholder {
-  opacity: 0; /* Скрытие плейсхолдера при фокусе */
+  opacity: 0;
 }
 
 .form-input:focus + .placeholder-star {
-  display: none; /* Скрытие звёздочки при фокусе */
+  display: none;
 }
 
 .custom-select {
@@ -284,49 +311,61 @@
 }
 
 .select-label {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #aaa;
+  
   background-color: #fff;
+  
+  color: #aaa;
+  
+  padding: 0.625rem 1rem;
   border: 1px solid #ddd;
-  padding: 10px 15px;
-  border-radius: 10px;
+  border-radius: 0.625rem;
+  
   cursor: pointer;
-  position: relative;
 }
 
 .select-label::after {
   content: "";
   position: absolute;
-  right: 15px;
+  right: 1rem;
   top: 50%;
-  transform: translateY(-50%);
+  
   border: 5px solid transparent;
   border-radius: 3px;
   border-top-color: #aaa;
   
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+  border-color 0.3s,
+  box-shadow 0.3s;
+  
+  transform: translateY(-50%);
 }
 
 .select-dropdown {
-  display: none;
   position: absolute;
+  display: none;
   top: 100%;
   left: 0;
-  width: 100%;
-  max-height: 200px;
   overflow-y: auto;
+  
   background: #fff;
+  
+  max-height: 12.5rem;
+  width: 100%;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 0.625rem;
+  
   z-index: 10;
 }
 
 .select-dropdown .select-option {
-  padding: 10px 15px;
-  cursor: pointer;
+  padding: 0.625rem 1rem;
+  
   transition: background-color 0.2s;
+  cursor: pointer;
 }
 
 .select-dropdown .select-option:hover {
@@ -343,7 +382,7 @@
 
 .select-label:focus,
 .select-label.focused {
-  border-color: #4E9F37;
+  border-color: #4e9f37;
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
   outline: none;
 }
@@ -353,13 +392,15 @@
 .radio-group {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 .radio-label {
   display: flex;
   align-items: center;
-  font-size: 16px;
+  
+  font-size: 1rem;
+
   cursor: pointer;
 }
 
@@ -368,15 +409,19 @@
 }
 
 .radio-custom {
-  max-width: 20px;
-  max-height: 20px;
-  min-width: 20px;
-  min-height: 20px;
+  position: relative;
+  
+  max-width: 1.25rem;
+  max-height: 1.25rem;
+  min-width: 1.25rem;
+  min-height: 1.25rem;
+  margin-right: 0.625rem;
   border: 1px solid var(--secondary-color);
   border-radius: 50%;
-  margin-right: 10px;
-  position: relative;
-  transition: background-color 0.3s, border-color 0.3s;
+  
+  transition:
+    background-color 0.3s,
+    border-color 0.3s;
 }
 
 .radio-input:checked + .radio-custom {
@@ -385,12 +430,12 @@
 }
 
 .radio-input:checked + .radio-custom::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 3px;
   left: 3px;
-  width: 12px;
-  height: 12px;
+  width: 0.75rem;
+  height: 0.75rem;
   border-radius: 50%;
   background-color: var(--secondary-color);
 }
@@ -399,19 +444,21 @@
   border-color: var(--secondary-color);
 }
 
-/* Textarea */
-
 .form-textarea {
-  width: 100%;
-  min-height: 120px;
-  padding: 12px 16px;
   color: #000;
+  
+  min-height: 7.5rem;
+  width: 100%;
+  padding: 0.75rem 1rem;
   border: 1px solid #dcdcdc;
-  border-radius: 8px;
-  resize: none;
+  border-radius: 0.5rem;
   outline: none;
+  
+  resize: none;
   box-shadow: none;
-  transition: border-color 0.3s, box-shadow 0.3s;
+  transition:
+    border-color 0.3s,
+    box-shadow 0.3s;
 }
 
 .form-textarea:focus {
@@ -419,49 +466,50 @@
   box-shadow: 0 0 5px rgba(126, 53, 53, 0.3);
 }
 
-/* Стили для placeholder */
+/* Textarea */
+
 .form-textarea::placeholder {
-  font-size: 16px;
+  font-size: 1rem;
   color: #b1b1b1;
 }
 
-@media (max-width: 960px) {
+@media (width <= 960px) {
   .cart .button-switch {
     position: relative;
+    overflow: hidden;
+    
     width: 926px;
     height: 39px;
-    border-radius: 10px;
-    
-    overflow: hidden;
+    border-radius: 0.625rem;
   }
-  
+
   .cart .button-switch .knobs:before,
   .cart .button-switch .knobs:after,
   .cart .button-switch .knobs span {
     width: calc((100% - 25px) / 2);
   }
-  
+
   .cart .button-switch .checkbox:checked + .knobs:before {
     left: calc((100% - 25px) / 2 + 20px);
   }
 }
 
-@media (max-width: 420px) {
+@media (width <= 420px) {
   .modal-change-address .button-switch {
     position: relative;
-    width: 308px;
-    height: 39px;
-    border-radius: 10px;
-    
     overflow: hidden;
+
+    width: 19.25rem;
+    height: 39px;
+    border-radius: 0.625rem;
   }
-  
+
   .modal-change-address .button-switch .knobs:before,
   .modal-change-address .button-switch .knobs:after,
   .modal-change-address .button-switch .knobs span {
     width: calc((100% - 25px) / 2);
   }
-  
+
   .modal-change-address .button-switch .checkbox:checked + .knobs:before {
     left: calc((100% - 25px) / 2 + 20px);
   }
