--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -106,7 +106,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   column-gap: 4rem;
-  
+
   max-width: 984px;
   width: 100%;
 }
@@ -200,7 +200,7 @@
   position: absolute;
   top: 36%;
   left: 51%;
-  
+
   max-width: 500px;
   max-height: 600px;
   height: calc(100% - 100px);
@@ -256,7 +256,7 @@
 
 .instagram-storie-wrapper {
   flex-grow: 1;
-  
+
   width: 100%;
 
   z-index: 9;
@@ -266,7 +266,7 @@
   display: flex;
 
   background-color: transparent;
-  
+
   padding: 12px 0px 8px 0px;
 }
 
@@ -291,14 +291,15 @@
   margin-right: 2px;
 }
 
-.instagram-stories-btn-next, .instagram-stories-btn-prev {
+.instagram-stories-btn-next,
+.instagram-stories-btn-prev {
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  
-  background-color: #BEBEBE;
-  
+
+  background-color: #bebebe;
+
   width: 53px;
   height: 50px;
   padding: 0px;
@@ -306,7 +307,7 @@
   border-radius: 5px;
   border-radius: 50%;
   outline: none;
-  
+
   cursor: pointer;
   z-index: 10;
   transform: translateY(-50%);
@@ -425,7 +426,7 @@
   align-items: flex-end;
 }
 
-@media (max-width: 1280px) {
+@media (width <= 1280px) {
   /* Header */
 
   .header {
@@ -495,7 +496,7 @@
   .stories-slider {
     padding: 1.25rem 0.625rem;
   }
-  
+
   .stories .scroll-stories {
     column-gap: 1rem;
   }
@@ -523,7 +524,7 @@
   }
 }
 
-@media (max-width: 575px) {
+@media (width <= 575px) {
   /* Dishes slider */
 
   .dishes-glide-slide {
@@ -541,7 +542,7 @@
 
   /* Stories */
 
-  .stories .scroll-stories .story .photo img {  
+  .stories .scroll-stories .story .photo img {
     width: 88px;
     height: 88px;
   }
@@ -556,7 +557,7 @@
   }
 }
 
-@media (max-width: 395px) {
+@media (width <= 395px) {
   .dishes-glide-slide {
     min-height: 540px;
   }
@@ -566,7 +567,7 @@
   }
 
   /* Stories */
-  
+
   .stories .scroll-stories {
     column-gap: 0;
   }
@@ -576,7 +577,7 @@
     height: 86px;
   }
 
-  .stories .scroll-stories .story .photo img {  
+  .stories .scroll-stories .story .photo img {
     width: 66px;
     height: 66px;
   }
