--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -392,6 +392,7 @@
   overflow: hidden;
 
   max-height: 367px;
+  width: 100%;
   border-radius: 10px;
 
   box-shadow: 0 4px 100px 5px rgba(0, 0, 0, 0.06);
