--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  min-height: 720px;
   width: 100%;
   padding-bottom: 2.75rem;
 }
@@ -65,7 +66,7 @@
 }
 
 .dish-img {
-  max-height: 460px;
+  max-width: 490px;
 }
 
 /* Stories slider */
@@ -476,7 +477,7 @@
   }
 
   .dishes-glide-slide {
-    min-height: 776px;
+    min-height: 730px;
   }
 
   .dish-img {
