--- a/src/assets/styles/posters.css
+++ b/src/assets/styles/posters.css
@@ -42,8 +42,8 @@
 
 .posters-container {
   display: grid;
-  grid-template-rows: repeat(7, minmax(170px, 1fr));
   grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 1fr;
   gap: 1.5rem;
 
   height: 100%;
@@ -150,12 +150,6 @@
   grid-column-end: 7;
 }
 
-@media (width <= 1280px) {
-  .posters-container {
-    grid-template-rows: repeat(7, minmax(90px, 1fr));
-  }
-}
-
 @media (width <= 960px) {
   /* Heeader */
 
@@ -195,7 +189,7 @@
 
   .posters-container {
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-template-rows: repeat(4, minmax(400px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
 
     padding: 0 0.625rem;
   }
@@ -218,14 +212,14 @@
 
   .posters-container {
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-template-rows: repeat(8, minmax(400px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
   }
 }
 
 @media (width <= 395px) {
   .posters-container {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: repeat(8, minmax(350px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(350px, 1fr));
   }
 
   .poster-item-content {
